--- a/css/ket.css
+++ b/css/ket.css
@@ -205,7 +205,8 @@ footer p {
 .splashscreen-bg {
 
 	/* The image used */
-	background-image: url("https://www.makenewstory.com/assets/users/mIjh78y8ge13b89d99c1a29132e57d2ca/album1.png?nocache=1440");
+	/* background-image: url("https://www.makenewstory.com/assets/users/mIjh78y8ge13b89d99c1a29132e57d2ca/album1.png?nocache=1440"); */
+	background-image: url("../img/bg.jpg");
 
 	/* Full height */
 	height: 100%;
@@ -215,7 +216,7 @@ footer p {
 	background-repeat: no-repeat;
 	background-size: cover;
 	opacity: 0.2;
-	-webkit-filter: blur(4px);
+	/* -webkit-filter: blur(4px); */
 }
 
 .tengah {
